--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
-<nav>
-  <a routerLink="">Home</a> |
-  <a routerLink="/about">About</a>
-</nav>
+<div class="app-container">
+  <app-header [title]="title"></app-header>
+
+  <nav class="navigation">
+    <ul>
+      <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+      <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+    </ul>
+  </nav>
+
+  <main class="main-content">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
+</div>
