--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,2 +1,5 @@
-<h2>About Task Manager</h2>
-<p>This is a simple Angular app to manage tasks.</p>
+<div class="about-container">
+  <div class="about-content">
+    <h1>About Task Manager</h1>
+  </div>
+</div>
